<resources>
  <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
  <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>


  <string name="nav_header_title">Guest</string>
  <string name="nav_header_desc">Navigation header</string>

  <string name="menu_anime_list">Gallery</string>
  <string name="menu_preference">Preference</string>
  <string name="menu_favorite">Favorite</string>
  <string name="menu_history">History</string>
  <string name="menu_download">Download</string>
  <string name="menu_setting">Setting</string>
  <string name="placeholder">placeholder</string>
  <string name="large_text">Material is the metaphor</string>
  <string name="action_settings">Settings</string>
  <string name="exo_fullscreen_icon">fullscreen</string>
  <string name="action_search">Search</string>
  <string name="yes">是</string>
  <string name="no">否</string>
  <string name="alert_rationale_message">rationale message</string>
</resources>
