<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_home"
      android:icon="@drawable/ic_menu_gallery"
      android:title="@string/menu_anime_list" />
    <item
      android:id="@+id/nav_favorite"
      android:enabled="true"
      android:icon="@drawable/ic_menu_gallery"
      android:title="@string/menu_favorite" />
    <item
      android:id="@+id/nav_history"
      android:enabled="true"
      android:icon="@drawable/ic_menu_gallery"
      android:title="@string/menu_history"
      android:visible="true" />
    <item
      android:id="@+id/nav_download"
      android:enabled="false"
      android:icon="@drawable/ic_menu_send"
      android:title="@string/menu_download"
      android:visible="true" />
  </group>

  <item android:title="@string/menu_setting">
    <menu>
      <item
        android:id="@+id/nav_setting"
        android:enabled="false"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/menu_preference"
        android:visible="true" />
    </menu>
  </item>

</menu>
